# secloop

./: .gitignore  LICENSE  PROMPT.md  README.md  config.yaml  pyproject.toml  ralph.sh  secloop-diagram.excalidraw
.github/workflows/: security.yml
sample_project/: main.py  requirements.txt  test_main.py
src/ralph/: __init__.py  cli.py  loop.py  ui.py
src/ralph/scanners/: __init__.py  base.py  npm.py
src/secloop/: __init__.py  cli.py  config.py  ui.py
src/secloop/scanners/: __init__.py  go.py  pip.py  ruby.py  rust.py  sast.py  secrets.py
