[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-loop"
version = "0.1.0"
description = "Autonomous dependency vulnerability patcher using LLM loops"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["security", "vulnerabilities", "ai", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ralph = "ralph.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/ralph-loop"
Documentation = "https://github.com/yourusername/ralph-loop#readme"
Repository = "https://github.com/yourusername/ralph-loop"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/prompts",
]
