[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secloop"
version = "0.2.0"
description = "Autonomous security scanner & fixer using LLM loops"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nancy Chauhan" }
]
keywords = ["security", "vulnerabilities", "ai", "llm", "automation", "sast", "secrets", "devsecops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
secloop = "secloop.cli:app"

[project.urls]
Homepage = "https://github.com/Nancy-Chauhan/secloop"
Documentation = "https://github.com/Nancy-Chauhan/secloop#readme"
Repository = "https://github.com/Nancy-Chauhan/secloop"

[tool.hatch.build.targets.wheel]
packages = ["src/secloop"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/prompts",
]
